# aoc_2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
day_01/: day_01.py
day_02/: day_02.py
day_03/: day_03.py
day_04/: day_04.py
day_1/: day_1.py
