[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "AOC 2024"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.13.0",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F"]
lint.ignore = [ ]
lint.unfixable = []
lint.fixable = ["ALL"]
